--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Current Delhi Sensor Data</title>
+    <title>Delhi Air Quality</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
     <div class=container>
       <div class="row">
         <div class="col-sm-6 col-sm-push-3">
-          <h1>Current Delhi Sensor Data</h1>
+          <h1>Delhi Air Quality</h1>
         </div>
       </div>
       <section id="result">
